--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ionic/vue-router": "^7.0.0",
     "axios": "^1.4.0",
     "ionicons": "^7.0.0",
+    "swiper": "^10.2.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
